# rust-beginner

./: .gitignore  Cargo.toml  main
chapter_7/: Cargo.toml
collections/src/: main.rs
common-programming-concepts/src/: main.rs
enums/src/: main.rs
guessing_game/src/: main.rs
ownership/: README.md
ownership/src/: main.rs
restaurant/src/: lib.rs
src/: main.rs
structs/src/: main.rs
waytoodeep/: Cargo.toml
waytoodeep/src/: main.rs
